[package]
name = "sequence"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
crc-fast = "1.5.0"
parking_lot = "0.12"
rkyv = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47.1", features = ["full"] }
memmap2 = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "concurrent_rw"
harness = false
